--- a/acceso/templates/acceso.html
+++ b/acceso/templates/acceso.html
@@ -1,129 +1,115 @@
 {% extends 'base.html' %}
 
-{% block active_acceder %}active{% endblock %}
+{% block active_acceder %}
+  active
+{% endblock %}
 
 {% load static %}
 
 {% block css %}
-
-<link rel="stylesheet" href="{% static 'assets/css/estilos_acceso.css' %}">
-<link href="{% static 'assets/font/fonts.css' %}" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'assets/css/estilos_acceso.css' %}" />
+  <link href="{% static 'assets/font/fonts.css' %}" rel="stylesheet" />
 {% endblock %}
-
 
 {% block content %}
+  <section id="breadcrumbs" class="breadcrumbs">
+    <div class="container">
+      <div class="d-flex justify-content-between align-items-center">
+        <h2>Acceder o Registrarse</h2>
+        <ol>
+          <li>
+            <a href="{% url 'inicio:home' %}">Inicio</a>
+          </li>
+          <li>Acceder o Registrarse</li>
+        </ol>
+      </div>
+    </div>
+  </section>
+  <!-- End Breadcrumbs -->
 
-<section id="breadcrumbs" class="breadcrumbs">
-	<div class="container">
+  <div class="contenido">
+    {% if msj %}
+      <div class="warning">
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        {{ error }}
+      </div>
+    {% endif %}
 
-		<div class="d-flex justify-content-between align-items-center">
-			<h2>Acceder o Registrarse</h2>
-			<ol>
-				<li><a href="{% url 'inicio:home' %}">Inicio</a></li>
-				<li>Acceder o Registrarse</li>
-			</ol>
-		</div>
+    <div class="main">
+      <input type="checkbox" id="chk" aria-hidden="true" />
 
-	</div>
-</section><!-- End Breadcrumbs -->
+      <div class="login">
+        {% comment %}iniciar_sesion{% endcomment %}
+        <form action="" method="post">
+          {% csrf_token %}
+          <label class="title" for="chk" aria-hidden="true">Iniciar sesión</label>
 
-<div class="contenido">
+          <div class="form-floating">
+            <input type="text" class="form-control" id="username" name="username" placeholder="Nombre de usuario" required />
+            <label for="username">Nombre de usuario</label>
+          </div>
 
-	{% if msj %}
-	<div class="warning">
-		<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-		{{error}}
-	</div>
-	{% endif %}
+          <div class="form-floating">
+            <input type="password" class="form-control" id="password" name="password" placeholder="Contraseña" required />
+            <label for="password">Contraseña</label>
+          </div>
 
-	<div class="main">
+          <button class="button_login">Iniciar sesión</button>
+        </form>
+      </div>
 
-		<input type="checkbox" id="chk" aria-hidden="true">
+      <div class="signup">
+        <form action="" method="post">
+          {% csrf_token %}
+          <label class="title" for="chk" aria-hidden="true">Registrarse</label>
 
-		<div class="login">
-			{% comment %} iniciar_sesion {% endcomment %}
-			<form action="" method="post">
-				{% csrf_token %}
-				<label class="title" for="chk" aria-hidden="true">Iniciar sesión</label>
+          <div class="form-floating">
+            <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" required />
+            <label for="nombre">Nombre</label>
+          </div>
 
-				<div class="form-floating">
-					<input type="text" class="form-control" id="username" name="username"
-						placeholder="Nombre de usuario" required>
-					<label for="username">Nombre de usuario</label>
-				</div>
+          <div class="form-floating">
+            <input type="text" class="form-control" id="apellido" name="apellido" placeholder="Apellido" required />
+            <label for="apellido">Apellido</label>
+          </div>
 
-				<div class="form-floating">
-					<input type="password" class="form-control" id="password" name="password" placeholder="Contraseña"
-						required>
-					<label for="password">Contraseña</label>
-				</div>
+          <div class="form-floating">
+            <input type="text" class="form-control" id="username" name="username" placeholder="Nombre de usuario" required />
+            <label for="username">Nombre de usuario</label>
+          </div>
 
-				<button class="button_login">Iniciar sesión</button>
-			</form>
-		</div>
+          <div class="form-floating">
+            <input type="email" class="form-control" id="email" name="email" placeholder="Correo electrónico" required />
+            <label for="email">Correo electrónico</label>
+          </div>
 
-		<div class="signup">
-			<form action="" method="post">
-				{% csrf_token %}
-				<label class="title" for="chk" aria-hidden="true">Registrarse</label>
+          <div class="form-floating">
+            <input type="password" class="form-control" id="password" name="password" placeholder="Contraseña" required />
+            <label for="password">Contraseña</label>
+          </div>
 
-				<div class="form-floating">
-					<input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" required>
-					<label for="nombre">Nombre</label>
-				</div>
-
-				<div class="form-floating">
-					<input type="text" class="form-control" id="apellido" name="apellido" placeholder="Apellido"
-						required>
-					<label for="apellido">Apellido</label>
-				</div>
-
-				<div class="form-floating">
-					<input type="text" class="form-control" id="username" name="username"
-						placeholder="Nombre de usuario" required>
-					<label for="username">Nombre de usuario</label>
-				</div>
-
-				<div class="form-floating">
-					<input type="email" class="form-control" id="email" name="email" placeholder="Correo electrónico"
-						required>
-					<label for="email">Correo electrónico</label>
-				</div>
-
-				<div class="form-floating">
-					<input type="password" class="form-control" id="password" name="password" placeholder="Contraseña"
-						required>
-					<label for="password">Contraseña</label>
-				</div>
-
-				<div class="form-floating">
-					<input type="password" class="form-control" id="confirmar_password" name="confirmar_password"
-						placeholder="Confirmar contraseña" required>
-					<label for="confirmar_password">Confirmar contraseña</label>
-				</div>
-				<button>Registrarse</button>
-			</form>
-		</div>
-	</div>
-
-</div>
-
+          <div class="form-floating">
+            <input type="password" class="form-control" id="confirmar_password" name="confirmar_password" placeholder="Confirmar contraseña" required />
+            <label for="confirmar_password">Confirmar contraseña</label>
+          </div>
+          <button>Registrarse</button>
+        </form>
+      </div>
+    </div>
+  </div>
 {% endblock %}
 
-
 {% block js %}
-
-<script>
-	const checkbox = document.getElementById('chk');
-	const mainDiv = document.querySelector('.main');
-
-	checkbox.addEventListener('change', function () {
-		if (this.checked) {
-			mainDiv.classList.add('small'); // Añade la clase 'small' para cambiar el tamaño
-		} else {
-			mainDiv.classList.remove('small'); // Remueve la clase 'small'
-		}
-	});
-</script>
-
+  <script>
+    const checkbox = document.getElementById('chk')
+    const mainDiv = document.querySelector('.main')
+    
+    checkbox.addEventListener('change', function () {
+      if (this.checked) {
+        mainDiv.classList.add('small') // Añade la clase 'small' para cambiar el tamaño
+      } else {
+        mainDiv.classList.remove('small') // Remueve la clase 'small'
+      }
+    })
+  </script>
 {% endblock %}
