--- a/inmuebles/static/assets/css/inmuebles.css
+++ b/inmuebles/static/assets/css/inmuebles.css
@@ -301,7 +301,7 @@
     width: 100%;
     margin-top: -100px;
     -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.05);
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.05);
+    box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.05);
     z-index: 2;
 }
 
