--- a/contacto/templates/contacto.html
+++ b/contacto/templates/contacto.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}Contacto{% endblock title %}
+
 {% block active_contacto %}active{% endblock %}
 {% load static %}
 
