--- a/inmuebles/templates/InmuebleDetail/index.html
+++ b/inmuebles/templates/InmuebleDetail/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}Inmuebles{% endblock title %}
 {% block active_inmuebles %}active{% endblock active_inmuebles %}
 
 {% load static %}
