--- a/servicios/templates/servicios.html
+++ b/servicios/templates/servicios.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}Servicios{% endblock title %}
 {% block active_servicios %}active{% endblock %}
 
 {% load static %}
