--- a/inicio/templates/inicio.html
+++ b/inicio/templates/inicio.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}Inicio{% endblock title %}
 {% block active_inicio %}active{% endblock %}
 
 {% load static %}
