--- a/nosotros/templates/nosotros.html
+++ b/nosotros/templates/nosotros.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}Acerca de Nosotros{% endblock title %}
 {% block active_nosotros %}active{% endblock %}
 
 {% load static %}
