--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>{{ informacion_empresa.nombre_empresa }}</title>
+    <title>{{ informacion_empresa.nombre_empresa }} | {% block title %} {% endblock %}</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
