--- a/acceso/static/assets/css/estilos_acceso.css
+++ b/acceso/static/assets/css/estilos_acceso.css
@@ -32,8 +32,8 @@
 	font-family: 'Jost', sans-serif;
 	position: relative;
 	overflow: hidden;
-	flex-direction: column; /* Alinea los elementos en columna */
-	background-color: #f6f3f2;
+	flex-direction: column;
+	/* Alinea los elementos en columna */
 }
 
 .main {
@@ -51,7 +51,9 @@
 .main.small {
 	height: 780px;
 	overflow: hidden;
-	.login .form-floating, .button_login{
+
+	.login .form-floating,
+	.button_login {
 		display: none;
 	}
 }
@@ -98,7 +100,7 @@
 	transform: scale(1.05);
 }
 
-.contenido .form-floating{
+.contenido .form-floating {
 	margin: 20px auto;
 	display: flex;
 	align-items: center;
@@ -106,7 +108,7 @@
 	transform: scale(1.05);
 }
 
-.contenido .form-floating label{
+.contenido .form-floating label {
 	margin-left: 70px;
 	transform: scale(1.05);
 }
@@ -116,8 +118,6 @@
 	box-shadow: 4px 4px 8px #0095ff;
 	/* Sombra con tono cósmico */
 }
-
-
 
 .contenido button {
 	width: 60%;
@@ -159,7 +159,6 @@
 
 .signup {
 	height: 780px;
-	background: #f5f5f5;
 	border-radius: 70% / 10%;
 	transform: translateY(-180px);
 	transition: .8s ease-in-out;
