--- a/acceso/templates/acceso.html
+++ b/acceso/templates/acceso.html
@@ -1,16 +1,15 @@
-{% extends 'base.html' %}
-{% block title %}Acceso{% endblock title %} 
+{% extends "base.html" %}
+{% load static %}
+{% block title %}
+  Acceso
+{% endblock title %}
 {% block active_acceder %}
   active
-{% endblock %}
-
-{% load static %}
-
+{% endblock active_acceder %}
 {% block css %}
   <link rel="stylesheet" href="{% static 'assets/css/estilos_acceso.css' %}" />
   <link href="{% static 'assets/font/fonts.css' %}" rel="stylesheet" />
-{% endblock %}
-
+{% endblock css %}
 {% block content %}
   <section id="breadcrumbs" class="breadcrumbs">
     <div class="container">
@@ -26,79 +25,107 @@
     </div>
   </section>
   <!-- End Breadcrumbs -->
-
-  <div class="contenido">
-    {% if msj %}
-      <div class="warning">
-        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-        {{ error }}
-      </div>
-    {% endif %}
-
-    <div class="main">
-      <input type="checkbox" id="chk" aria-hidden="true" />
-
-      <div class="login">
-        {% comment %}iniciar_sesion{% endcomment %}
-        <form action="" method="post">
-          {% csrf_token %}
-          <label class="title" for="chk" aria-hidden="true">Iniciar sesión</label>
-
-          <div class="form-floating">
-            <input type="text" class="form-control" id="username" name="username" placeholder="Nombre de usuario" required />
-            <label for="username">Nombre de usuario</label>
-          </div>
-
-          <div class="form-floating">
-            <input type="password" class="form-control" id="password" name="password" placeholder="Contraseña" required />
-            <label for="password">Contraseña</label>
-          </div>
-
-          <button class="button_login">Iniciar sesión</button>
-        </form>
-      </div>
-
-      <div class="signup">
-        <form action="" method="post">
-          {% csrf_token %}
-          <label class="title" for="chk" aria-hidden="true">Registrarse</label>
-
-          <div class="form-floating">
-            <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" required />
-            <label for="nombre">Nombre</label>
-          </div>
-
-          <div class="form-floating">
-            <input type="text" class="form-control" id="apellido" name="apellido" placeholder="Apellido" required />
-            <label for="apellido">Apellido</label>
-          </div>
-
-          <div class="form-floating">
-            <input type="text" class="form-control" id="username" name="username" placeholder="Nombre de usuario" required />
-            <label for="username">Nombre de usuario</label>
-          </div>
-
-          <div class="form-floating">
-            <input type="email" class="form-control" id="email" name="email" placeholder="Correo electrónico" required />
-            <label for="email">Correo electrónico</label>
-          </div>
-
-          <div class="form-floating">
-            <input type="password" class="form-control" id="password" name="password" placeholder="Contraseña" required />
-            <label for="password">Contraseña</label>
-          </div>
-
-          <div class="form-floating">
-            <input type="password" class="form-control" id="confirmar_password" name="confirmar_password" placeholder="Confirmar contraseña" required />
-            <label for="confirmar_password">Confirmar contraseña</label>
-          </div>
-          <button>Registrarse</button>
-        </form>
+  <section class="acceso section-bg">
+    <div class="contenido" data-aos="fade-up">
+      {% if msj %}
+        <div class="warning">
+          <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+          {{ error }}
+        </div>
+      {% endif %}
+      <div class="main">
+        <input type="checkbox" id="chk" aria-hidden="true" />
+        <div class="login">
+          {% comment %}iniciar_sesion{% endcomment %}
+          <form action="" method="post">
+            {% csrf_token %}
+            <label class="title" for="chk" aria-hidden="true">Iniciar sesión</label>
+            <div class="form-floating">
+              <input type="text"
+                     class="form-control"
+                     id="username"
+                     name="username"
+                     placeholder="Nombre de usuario"
+                     required />
+              <label for="username">Nombre de usuario</label>
+            </div>
+            <div class="form-floating">
+              <input type="password"
+                     class="form-control"
+                     id="password"
+                     name="password"
+                     placeholder="Contraseña"
+                     required />
+              <label for="password">Contraseña</label>
+            </div>
+            <button class="button_login">Iniciar sesión</button>
+          </form>
+        </div>
+        <div class="signup section-bg">
+          <form action="" method="post">
+            {% csrf_token %}
+            <label class="title" for="chk" aria-hidden="true">Registrarse</label>
+            <div class="form-floating">
+              <input type="text"
+                     class="form-control"
+                     id="nombre"
+                     name="nombre"
+                     placeholder="Nombre"
+                     required />
+              <label for="nombre">Nombre</label>
+            </div>
+            <div class="form-floating">
+              <input type="text"
+                     class="form-control"
+                     id="apellido"
+                     name="apellido"
+                     placeholder="Apellido"
+                     required />
+              <label for="apellido">Apellido</label>
+            </div>
+            <div class="form-floating">
+              <input type="text"
+                     class="form-control"
+                     id="username"
+                     name="username"
+                     placeholder="Nombre de usuario"
+                     required />
+              <label for="username">Nombre de usuario</label>
+            </div>
+            <div class="form-floating">
+              <input type="email"
+                     class="form-control"
+                     id="email"
+                     name="email"
+                     placeholder="Correo electrónico"
+                     required />
+              <label for="email">Correo electrónico</label>
+            </div>
+            <div class="form-floating">
+              <input type="password"
+                     class="form-control"
+                     id="password"
+                     name="password"
+                     placeholder="Contraseña"
+                     required />
+              <label for="password">Contraseña</label>
+            </div>
+            <div class="form-floating">
+              <input type="password"
+                     class="form-control"
+                     id="confirmar_password"
+                     name="confirmar_password"
+                     placeholder="Confirmar contraseña"
+                     required />
+              <label for="confirmar_password">Confirmar contraseña</label>
+            </div>
+            <button>Registrarse</button>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-{% endblock %}
-
+  </section>
+{% endblock content %}
 {% block js %}
   <script>
     const checkbox = document.getElementById('chk')
@@ -112,4 +139,4 @@
       }
     })
   </script>
-{% endblock %}
+{% endblock js %}
